@@ -1,2 +1,2 @@
-Mon Oct 14 09:21:17 GMT 2024
-Mon Oct 14 06:21:17 -03 2024
+Sun Oct 20 23:11:02 GMT 2024
+Sun Oct 20 20:11:02 -03 2024
